# scrapeapi

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: build.yml
app/: main.py  telemetry.py
sdk/go/: README.md  client.go  go.mod  go.sum
sdk/go/example/: .env  .env.example  main.go
