[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapeapi"
version = "1.0.1"
description = "FastAPI service wrapping scrapegraph-ai for HTTP-based web scraping"
requires-python = ">=3.13"
authors = [
    {name = "dir01"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "scrapegraphai",
    "pydantic",
    "jsonschema",
    "json-schema-to-pydantic",
    # OpenTelemetry dependencies
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-asyncio",
    "opentelemetry-exporter-otlp",
    "opentelemetry-exporter-jaeger",
    "deprecated",
]

[project.optional-dependencies]
browser = ["playwright"]

[project.urls]
Homepage = "https://github.com/dir01/scrapeapi"
Repository = "https://github.com/dir01/scrapeapi"
Issues = "https://github.com/dir01/scrapeapi/issues"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
